# usb-hid-display

./: IMPROVEMENT_PLAN.md  README.md
hardware/: usb-hid-display.kicad_pcb  usb-hid-display.kicad_pro  usb-hid-display.kicad_sch
rp2040/: CMakeLists.txt  pico_sdk_import.cmake
rp2040/src/: font8x8_basic.h  main.cpp  main.h  rotary_encoder.cpp  ssd1306.cpp  tusb_config.h  usb_descriptors.c
